unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Amount_Matched_by_Donor__c.field-meta.xml
<CustomField>
    <fullName>Amount_Matched_by_Donor__c</fullName>
    <description>Shows the Payment Amount when Condition Met = TRUE; otherwise $0.</description>
    <formula>if ( Condition_Met__c = TRUE,  Payment_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Matched by Donor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>