unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Amount_Matched_by_Donor_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Amount_Matched_by_Donor_Numeric__c</fullName>
    <label>Amount Matched by Donor($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>