unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Annual_Challenge_Match__c.field-meta.xml
<CustomField>
    <fullName>Annual_Challenge_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Challenge Match</label>
    <referenceTo>Annual_Match__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>