unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Annual_Match__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of 2023 R4 enhancements (US-740).</description>
    <inlineHelpText>If set to TRUE, allows the Annual Match fields to be inputted on a Conditional Deliverable.</inlineHelpText>
    <label>Annual Match</label>
    <type>Checkbox</type>
</CustomField>