unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Annual_Match_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_Amount__c</fullName>
    <label>Amount Needed to Unlock Annual Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>