unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Annual_Match_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_End_Date__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Manually maintained and tracks the end date of the annual match (could be different than the Deliverable Due Date)</description>
    <label>Annual Match End Date</label>
    <type>Date</type>
</CustomField>