unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Annual_Match_Gap__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_Gap__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). If the Amount Needed to Unlock Annual Match is greater than the Raised to Date for Match, this field will display the difference between the two fields. Otherwise, it will be 0.</description>
    <formula>If( Annual_Match_Amount__c  &gt; Raised_to_Date_for_Annual_Match__c, Annual_Match_Amount__c - Raised_to_Date_for_Annual_Match__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Match Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>