unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Annual_Match_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_Start_Date__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Manually maintained and tracks the start date of the annual match</description>
    <label>Annual Match Start Date</label>
    <type>Date</type>
</CustomField>