unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Annual_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_Status__c</fullName>
    <description>Manually maintained and tracks the status of the annual match. Doesn't have any automatic connection between this field and the Condition Met field.</description>
    <label>Annual Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed - Met</fullName>
            </value>
            <value>
                <fullName>Completed - Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>