unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to track the deliverable is assigned to whom to create a task via automation.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>