unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Budget_Needs__c.field-meta.xml
<CustomField>
    <fullName>Budget_Needs__c</fullName>
    <description>Created as a part Heller Data Migration 2021.</description>
    <label>Budget Needs</label>
    <type>TextArea</type>
</CustomField>