unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Condition_Met__c.field-meta.xml
<CustomField>
    <fullName>Condition_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of Heller Migration 2021.</description>
    <label>Condition Met</label>
    <type>Checkbox</type>
</CustomField>