unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>