unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Created as a part of Data Migration.</description>
    <label>External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>