unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Legacy_Source_Table__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_Table__c</fullName>
    <label>Legacy Source Table</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deliverable</fullName>
            </value>
            <value>
                <fullName>Reporting Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>