unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Narrative_Needs__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Needs__c</fullName>
    <description>Created as a part Heller Data Migration 2021.</description>
    <label>Narrative Needs</label>
    <type>TextArea</type>
</CustomField>