unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/NetSuite_Invoice__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>NetSuite - Invoice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>