unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/NetSuite_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Invoice_ID__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>NetSuite - Invoice ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>