unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/npsp__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>npsp__Opportunity__c</fullName>
    <description>Master-Detail relationship that determines which Opportunity this Deliverable is related to.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Grant_Deadlines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>