unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/NS_Invoice_Integration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>NS_Invoice_Integration_DateTime__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>NS Invoice Integration DateTime</label>
    <type>DateTime</type>
</CustomField>