unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/NS_Invoice_Integration_Status_Msg__c.field-meta.xml
<CustomField>
    <fullName>NS_Invoice_Integration_Status_Msg__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>NS Invoice Integration Status Msg</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>