unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Date__c</fullName>
    <description>Created as a part of Heller Data Migration 2021. Legacy field that is likely no longer needed; need can be met through custom report type (FB-1654)</description>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>