unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Pledge_Installment_Payment__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Installment_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge Installment Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>npe01__OppPayment__c.npe01__Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.npsp__Opportunity__c</valueField>
        </filterItems>
        <filterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables1</relationshipName>
    <type>Lookup</type>
</CustomField>