unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Program_Contacts_Old__c.field-meta.xml
<CustomField>
    <fullName>Program_Contacts_Old__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Program Contacts Old</label>
    <type>TextArea</type>
</CustomField>