unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Created as a part of Heller Data Migration 2021</description>
    <label>Project</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activism General</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Affiliate Advocacy</fullName>
            </value>
            <value>
                <fullName>Agriculture Finance</fullName>
            </value>
            <value>
                <fullName>Air Quality</fullName>
            </value>
            <value>
                <fullName>Air Quality - Power Plants</fullName>
            </value>
            <value>
                <fullName>Ambassadors</fullName>
            </value>
            <value>
                <fullName>Behavioral/Social Science</fullName>
            </value>
            <value>
                <fullName>Big Energy Data</fullName>
            </value>
            <value>
                <fullName>Building Electrification</fullName>
            </value>
            <value>
                <fullName>Carbon Markets - Agriculture</fullName>
            </value>
            <value>
                <fullName>Carbon Markets - Aviation</fullName>
            </value>
            <value>
                <fullName>Carbon Markets - Club</fullName>
            </value>
            <value>
                <fullName>Carbon Markets - Design and Capacity Building</fullName>
            </value>
            <value>
                <fullName>Carbon Markets - General</fullName>
            </value>
            <value>
                <fullName>Carbon Markets - UNFCCC</fullName>
            </value>
            <value>
                <fullName>Clean Air - Power Plant Standards</fullName>
            </value>
            <value>
                <fullName>Clean Air - Utilities (PA)</fullName>
            </value>
            <value>
                <fullName>Clean Energy General</fullName>
            </value>
            <value>
                <fullName>Clean Energy Jobs</fullName>
            </value>
            <value>
                <fullName>Clean Power</fullName>
            </value>
            <value>
                <fullName>Clean Power (PA)</fullName>
            </value>
            <value>
                <fullName>Clean Power Plan - Litigation</fullName>
            </value>
            <value>
                <fullName>Clean Shipping</fullName>
            </value>
            <value>
                <fullName>Climate &amp; Air - General</fullName>
            </value>
            <value>
                <fullName>Climate &amp; Air - Port &amp; Hot Spot</fullName>
            </value>
            <value>
                <fullName>Climate &amp; Air - Ports and Hot Spots</fullName>
            </value>
            <value>
                <fullName>Climate &amp; Air - State Municipal Defense</fullName>
            </value>
            <value>
                <fullName>Climate &amp; Air - Transportation</fullName>
            </value>
            <value>
                <fullName>Climate Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>