unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Project Description</label>
    <type>TextArea</type>
</CustomField>