unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Raised_to_Date_for_Annual_Match__c.field-meta.xml
<CustomField>
    <fullName>Raised_to_Date_for_Annual_Match__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740). Roll-up SUM of the Qualifying Donations' "Qualifying Amount" where stage is received</description>
    <label>Raised to Date for Annual Match</label>
    <summarizedField>Qualifying_Donation__c.Qualifying_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Qualifying_Donation__c.Stage__c</field>
        <operation>equals</operation>
        <value>Received, Received as Unconditional Pledge, Received as Conditional Pledge</value>
    </summaryFilterItems>
    <summaryForeignKey>Qualifying_Donation__c.Annual_Challenge_Match__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>