unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Receivable_Natural_Account__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Natural_Account__c</fullName>
    <formula>IF(
AND(
TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName )="Received as Conditional Pledge", TEXT(  Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c )= "Individual"),"14000",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c)= "Foundation"),"14100",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c)= "Corporate"),"14300",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c)= "Other Institutional Giving"),"14220",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c)= "Government"),"14200",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c)= "Government Contract"),"14300",null))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receivable Natural Account</label>
    <type>Text</type>
</CustomField>