unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>US General</fullName>
            </value>
            <value>
                <fullName>US Alabama</fullName>
            </value>
            <value>
                <fullName>US Alaska</fullName>
            </value>
            <value>
                <fullName>US Arizona</fullName>
            </value>
            <value>
                <fullName>US Arkansas</fullName>
            </value>
            <value>
                <fullName>US California</fullName>
            </value>
            <value>
                <fullName>US Colorado</fullName>
            </value>
            <value>
                <fullName>US Connecticut</fullName>
            </value>
            <value>
                <fullName>US Delaware</fullName>
            </value>
            <value>
                <fullName>US Florida</fullName>
            </value>
            <value>
                <fullName>US Georgia</fullName>
            </value>
            <value>
                <fullName>US Hawaii</fullName>
            </value>
            <value>
                <fullName>US Idaho</fullName>
            </value>
            <value>
                <fullName>US Illinois</fullName>
            </value>
            <value>
                <fullName>US Indiana</fullName>
            </value>
            <value>
                <fullName>US Iowa</fullName>
            </value>
            <value>
                <fullName>US Kansas</fullName>
            </value>
            <value>
                <fullName>US Kentucky</fullName>
            </value>
            <value>
                <fullName>US Louisiana</fullName>
            </value>
            <value>
                <fullName>US Maine</fullName>
            </value>
            <value>
                <fullName>US Maryland</fullName>
            </value>
            <value>
                <fullName>US Massachusetts</fullName>
            </value>
            <value>
                <fullName>US Michigan</fullName>
            </value>
            <value>
                <fullName>US Minnesota</fullName>
            </value>
            <value>
                <fullName>US Mississippi</fullName>
            </value>
            <value>
                <fullName>US Missouri</fullName>
            </value>
            <value>
                <fullName>US Montana</fullName>
            </value>
            <value>
                <fullName>US Nebraska</fullName>
            </value>
            <value>
                <fullName>US Nevada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>