unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Reimbursement_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Request_Date__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Reimbursement Request Date</label>
    <type>Date</type>
</CustomField>