unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Report_Link__c</fullName>
    <description>Created as a part of Heller Data Migration 2021</description>
    <label>Report Link</label>
    <type>Url</type>
</CustomField>