unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Report_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Sent_Date__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Report Sent Date</label>
    <type>Date</type>
</CustomField>