unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Reporting_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_End_Date__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Reporting Period End Date</label>
    <type>Date</type>
</CustomField>