unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Revenue_Natural_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Natural_Account__c</fullName>
    <formula>IF(
AND(
TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName )="Received as Conditional Pledge", TEXT(   Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c  )= "Individual"),"41000",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c )= "Foundation"),"42000",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c )= "Corporate"),"42500",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c )= "Other Institutional Giving"),"42200",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c )= "Government"),"43000",
IF(
AND(
TEXT(Pledge_Installment_Payment__r.npe01__Opportunity__r.StageName)="Received as Conditional Pledge", TEXT( Pledge_Installment_Payment__r.npe01__Opportunity__r.Transaction_Type__c )= "Government Contract"),"49011",null))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Natural Account</label>
    <type>Text</type>
</CustomField>