unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Sub_Program__c.field-meta.xml
<CustomField>
    <fullName>Sub_Program__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Sub Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subprogram</valueSetName>
    </valueSet>
</CustomField>