unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Total_Raised_by_Annual_Match__c.field-meta.xml
<CustomField>
    <fullName>Total_Raised_by_Annual_Match__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740).
Raised to Date for Match + Amount Matched by Donor</description>
    <formula>Raised_to_Date_for_Annual_Match__c + Amount_Matched_by_Donor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Raised by Annual Match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>