unpackaged/main/default/objects/npsp__Grant_Deadline__c/fields/Writer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Writer_Assigned__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Writer Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ali Rieck</fullName>
            </value>
            <value>
                <fullName>Allison Cobb</fullName>
            </value>
            <value>
                <fullName>Ashley Lough</fullName>
            </value>
            <value>
                <fullName>Andrea Norris</fullName>
            </value>
            <value>
                <fullName>Camille de la Vega</fullName>
            </value>
            <value>
                <fullName>Emily Whitted</fullName>
            </value>
            <value>
                <fullName>Erica Reed</fullName>
            </value>
            <value>
                <fullName>Erika Reuter</fullName>
            </value>
            <value>
                <fullName>Erin Van Alsten</fullName>
            </value>
            <value>
                <fullName>Gabrielle Antoniadis</fullName>
            </value>
            <value>
                <fullName>Jason Martin</fullName>
            </value>
            <value>
                <fullName>Jen Coleman</fullName>
            </value>
            <value>
                <fullName>Jennifer Freeman</fullName>
            </value>
            <value>
                <fullName>Jerisha Gordon</fullName>
            </value>
            <value>
                <fullName>Joy Epting</fullName>
            </value>
            <value>
                <fullName>Judy Stoeven Davies</fullName>
            </value>
            <value>
                <fullName>Katie Wang</fullName>
            </value>
            <value>
                <fullName>Laura Lea Rubino</fullName>
            </value>
            <value>
                <fullName>Lindsay Ross</fullName>
            </value>
            <value>
                <fullName>Lisa Fullerton</fullName>
            </value>
            <value>
                <fullName>Lucy Henry</fullName>
            </value>
            <value>
                <fullName>Scott Meadows</fullName>
            </value>
            <value>
                <fullName>Sharon Nadel</fullName>
            </value>
            <value>
                <fullName>Shawna Wagner</fullName>
            </value>
            <value>
                <fullName>No Writer Assigned</fullName>
            </value>
            <value>
                <fullName>Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Dana Weidig</fullName>
            </value>
            <value>
                <fullName>Jason Martin;Lucy Henry</fullName>
            </value>
            <value>
                <fullName>No Writer Assigned;Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Jennifer Freeman;Jen Coleman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>